--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ ninja
 tabulate
 psutil
 tensorboard
+pyyaml
+easydict
+scipy
 
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
